compile_errors.txt
    Checking universal-solana-indexer v0.1.0 (D:\projects_d\rust-solana-indexer\universal_solana_indexer)
warning: unused imports: `debug`, `error`, and `warn`
  --> src\indexer\fetcher.rs:14:15
   |
14 | use tracing::{debug, error, warn};
   |               ^^^^^  ^^^^^  ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::error::IndexerError`
 --> src\indexer\mod.rs:6:5
  |
6 | use crate::error::IndexerError;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `anyhow::Context`
  --> src\indexer\mod.rs:10:5
   |
10 | use anyhow::Context;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `EncodedConfirmedTransactionWithStatusMeta`
  --> src\indexer\mod.rs:18:5
   |
18 |     EncodedConfirmedTransactionWithStatusMeta, EncodedTransaction, UiInnerInstructions,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `error`
  --> src\indexer\mod.rs:25:22
   |
25 | use tracing::{debug, error, info, warn};
   |                      ^^^^^

error[E0308]: mismatched types
  --> src\indexer\decoder.rs:34:5
   |
29 |   ) -> Option<(&'a crate::idl::IdlTypeDef, &'a [u8])> {
   |        ---------------------------------------------- expected `std::option::Option<(&'a IdlTypeDef, &'a [u8])>` because of return type
...
34 | /     idl.accounts
35 | |         .iter()
36 | |         .find(|acc| acc.discriminator == disc)
37 | |         .map(|acc| (acc, &data[8..]))
   | |_____________________________________^ expected `Option<(&IdlTypeDef, &[u8])>`, found `Option<(&IdlAccountDef, &[u8])>`
   |
   = note: expected enum `std::option::Option<(&'a IdlTypeDef, &'a _)>`
              found enum `std::option::Option<(&IdlAccountDef, &_)>`

warning: unused import: `Row`
 --> src\db.rs:3:20
  |
3 | use sqlx::{PgPool, Row};
  |                    ^^^

For more information about this error, try `rustc --explain E0308`.
warning: `universal-solana-indexer` (bin "universal-solana-indexer") generated 6 warnings
error: could not compile `universal-solana-indexer` (bin "universal-solana-indexer") due to 1 previous error; 6 warnings emitted
